--- a/roommate_expenses/requirements.txt
+++ b/roommate_expenses/requirements.txt
@@ -5,6 +5,7 @@ Django==4.2.26
 django-crispy-forms==2.5
 psycopg2-binary==2.9.11
 python-decouple==3.8
+reportlab==4.0.9
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
